--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="attribute_score_3">92</string>
     <string name="job_search_status">Casually looking</string>
     <string name="dev_name">ALEJANDRO</string>
+    <string name="company_logo">Company Logo</string>
 </resources>
